--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongoose": "^7.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
